SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold years 2008 and 2013 (default)
Revert changed test